--- a/.github/workflows/update-changelog.yaml
+++ b/.github/workflows/update-changelog.yaml
@@ -10,9 +10,9 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
               with:
-                  ref: main
+                  ref: ${{ github.event.release.target_commitish }}
 
             - name: Update Changelog
               uses: stefanzweifel/changelog-updater-action@v1
@@ -24,6 +24,6 @@ jobs:
             - name: Commit updated CHANGELOG
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
-                  branch: main
+                  branch: ${{ github.event.release.target_commitish }}
                   commit_message: Update CHANGELOG
-                  file_pattern: CHANGELOG.md
+                  file_pattern: _pages/changelog.md
