--- a/.github/workflows/update-changelog.yaml
+++ b/.github/workflows/update-changelog.yaml
@@ -19,11 +19,10 @@ jobs:
               with:
                   release-notes: ${{ github.event.release.body }}
                   latest-version: ${{ github.event.release.name }}
-                  path-to-changelog: CHANGELOG.md
+                  path-to-changelog: ./_pages/RAW_CHANGELOG.md
 
             - name: Commit updated CHANGELOG
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
                   branch: ${{ github.event.release.target_commitish }}
                   commit_message: Update CHANGELOG
-                  file_pattern: CHANGELOG.md
