--- a/.github/workflows/update-changelog.yaml
+++ b/.github/workflows/update-changelog.yaml
@@ -19,7 +19,7 @@ jobs:
               with:
                   release-notes: ${{ github.event.release.body }}
                   latest-version: ${{ github.event.release.name }}
-                  path-to-changelog: ./_pages/RAW_CHANGELOG.md
+                  path-to-changelog: _pages/CHANGELOG.md
 
             - name: Commit updated CHANGELOG
               uses: stefanzweifel/git-auto-commit-action@v4
