--- a/_config.yml
+++ b/_config.yml
@@ -64,17 +64,17 @@ cover_overlay_transparency                : 0.8
 
 body_background_color                     : "#ffffff"
 
-link_color                                : "#1d63ea"
+link_color                                : "#7891AD"
 
-app_title_color                           : "#ffffff"
+app_title_color                           : ""
 app_price_color                           : "#ffffff"
 app_description_color                     : "#ffffff"
 
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#1d63ea"
-feature_icons_background_color            : "#e6e6e6"
+feature_icons_foreground_color            : "#F6F6F6"
+feature_icons_background_color            : "#70B9CA"
 
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
