Fix color error

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ body_background_color                     : "#ffffff"
 
 link_color                                : "#7891AD"
 
-app_title_color                           : ""
+app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
 app_description_color                     : "#ffffff"
 
